--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,13 @@ runs:
       shell: bash
     - run: echo "INPUT_DESKTOP=${{ inputs.desktop }}" >> $GITHUB_ENV
       shell: bash
-    - run: python3 $GITHUB_ACTION_PATH/createAppImage.py
+    - run: |
+        python3 $GITHUB_ACTION_PATH/createAppImage.py \
+            --entrypoint="${{ env.INPUT_ENTRYPOINT }}" \
+            --name="${{ env.INPUT_NAME }}" \
+            --version=${{ env.INPUT_VERSION }} \
+            --icon="${{ env.INPUT_ICON }}" \
+            --desktop="${{ env.INPUT_DESKTOP }}"
       shell: bash
     - run: echo "is_update=${{ env.IS_UPDATE }}" >> $GITHUB_OUTPUT
       shell: bash
