--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ inputs:
     required: true
 outputs:
   is_update:
+    value: 
     description: 'Decision if the AppImage needs to be updated'
 runs:
   using: "composite"
@@ -42,9 +43,9 @@ runs:
       shell: bash
     - run: echo "INPUT_DESKTOP=${{ inputs.desktop }}" >> $GITHUB_ENV
       shell: bash
-    - run: echo "is_update=${{ env.IS_UPDATE }}" >> $GITHUB_OUTPUT
-      shell: bash
     - run: python3 $GITHUB_ACTION_PATH/createAppImage.py --entrypoint="${{ env.INPUT_ENTRYPOINT }}" --name="${{ env.INPUT_NAME }}" --version=${{ env.INPUT_VERSION }} --icon="${{ env.INPUT_ICON }}" --desktop="${{ env.INPUT_DESKTOP }}"
+      shell: bash
+    - run: echo "is_update=${{ env.IS_UPDATE }}" >> $GITHUB_OUTPUT
       shell: bash
     - uses: actions/upload-artifact@v4
       with:
