--- a/action.yml
+++ b/action.yml
@@ -11,8 +11,8 @@ inputs:
   name:
     description: 'Application name'
     required: true
-  version:
-    description: 'Application version'
+  versioncmd:
+    description: 'Command to get version'
     required: true
   icon:
     description: 'PNG icon for desktop file'
@@ -37,13 +37,13 @@ runs:
       shell: bash
     - run: echo "INPUT_NAME=${{ inputs.name }}" >> $GITHUB_ENV
       shell: bash
-    - run: echo "INPUT_VERSION=${{ inputs.version }}" >> $GITHUB_ENV
+    - run: echo "INPUT_VERSIONCMD=${{ inputs.versioncmd }}" >> $GITHUB_ENV
       shell: bash
     - run: echo "INPUT_ICON=${{ inputs.icon }}" >> $GITHUB_ENV
       shell: bash
     - run: echo "INPUT_DESKTOP=${{ inputs.desktop }}" >> $GITHUB_ENV
       shell: bash
-    - run: python3 $GITHUB_ACTION_PATH/createAppImage.py --entrypoint="${{ env.INPUT_ENTRYPOINT }}" --name="${{ env.INPUT_NAME }}" --version=${{ env.INPUT_VERSION }} --icon="${{ env.INPUT_ICON }}" --desktop="${{ env.INPUT_DESKTOP }}"
+    - run: python3 $GITHUB_ACTION_PATH/createAppImage.py --entrypoint="${{ env.INPUT_ENTRYPOINT }}" --name="${{ env.INPUT_NAME }}" --versioncmd="${{ env.INPUT_VERSIONCMD }}" --icon="${{ env.INPUT_ICON }}" --desktop="${{ env.INPUT_DESKTOP }}"
       shell: bash
     - name: consolidate_output
       run: echo "is_update=${{ env.IS_UPDATE }}" >> $GITHUB_OUTPUT
