--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ runs:
       shell: bash
     - run: pip install --upgrade certifi
       shell: bash
-    - run: python3 $GITHUB_ACTION_PATH/createAppImage.py
+    - run: python3 -u $GITHUB_ACTION_PATH/createAppImage.py
       shell: bash
     - uses: actions/upload-artifact@v4
       with:
